# Handeye-Calibration-ROS

./: .gitignore  README.md  README2.md
doc/: install_ur.md
src/: CMakeLists.txt
src/cam_transfrom_publish/: CMakeLists.txt
src/cam_transfrom_publish/launch/: camera_transform_publisher.launch
src/cam_transfrom_publish/src/: camera_transform_publisher.cpp
src/camera_driver/: CMakeLists.txt  package.xml
src/camera_driver/launch/: realsense_driver.launch
src/camera_driver/src/: realsense2_driver.cpp  realsense2_server.cpp
src/camera_transform_publisher/: CMakeLists.txt  camera_intrinsic.xml  camera_intrinsic_color_kinect.xml  camera_intrinsic_color_multi_left.xml  camera_intrinsic_color_multi_right.xml  camera_intrinsic_color_zhr.xml  package.xml
src/camera_transform_publisher/include/: aruco_plane.h
src/camera_transform_publisher/launch/: aruco_publisher_realsense.launch  camera_transform_publisher_kinect.launch  camera_transform_publisher_multi_left.launch  camera_transform_publisher_multi_right.launch  camera_transform_publisher_realsense.launch  chessboard_publisher_realsense.launch
src/camera_transform_publisher/src/: aruco_plane.cpp  aruco_publisher.cpp  camera_transform_publisher.cpp  camera_transform_publisher_r.cpp  chessboard_publisher.cpp  generate_chessboard.cpp
src/handeye_calib_chessboard/: CMakeLists.txt  package.xml
src/handeye_calib_chessboard/backup/: CalibratedTransform.yml
src/handeye_calib_chessboard/easy_handeye/launch/: calibrate.launch  start.launch
src/handeye_calib_chessboard/example/: CalibratedTransform.yml  TransformPairsInput.yml
src/handeye_calib_chessboard/launch/: handeye_dualCamera.launch  handeye_example.launch  handeye_online.launch  publish.launch  twocam_file.launch
src/handeye_calib_chessboard/src/: HandEyeCalibration.cc  cam_transform_publisher.cpp  handeye_calibration.cpp
src/handeye_calib_marker/: CMakeLists.txt  package.xml
src/handeye_calib_marker/example/: CalibratedTransform.yml  TransformPairsInput.yml
src/handeye_calib_marker/launch/: handeye_file.launch  handeye_fromfile.launch  handeye_online.launch  show_result.launch
src/handeye_calib_marker/src/: HandEyeCalibration.cc  HandEyeCalibration_test.cc  handeye_calibration.cpp
src/handeye_calib_sphere/: 1_grab_data.sh  2_do_calibration.sh  CMakeLists.txt  camera_intrinsic_color_realsense2.xml  camera_intrinsic_depth.xml  handeye_init.xml  handeye_result.xml  package.xml  robot_pose.xml  桥接ROSMaster到SDA
src/handeye_calib_sphere/backups/dataset_1129_1642/: handeye_init.xml  handeye_result.xml  pointcloud_01.pcd  pointcloud_02.pcd  pointcloud_03.pcd  pointcloud_04.pcd  pointcloud_05.pcd  pointcloud_06.pcd  pointcloud_07.pcd  pointcloud_08.pcd  pointcloud_09.pcd  pointcloud_10.pcd  pointcloud_11.pcd  pointcloud_12.pcd  pointcloud_13.pcd  pointcloud_14.pcd  pointcloud_15.pcd  pointcloud_16.pcd  pointcloud_17.pcd  pointcloud_18.pcd  pointcloud_19.pcd  pointcloud_20.pcd  pointcloud_21.pcd  pointcloud_22.pcd  pointcloud_23.pcd  pointcloud_24.pcd  pointcloud_25.pcd  pointcloud_26.pcd  pointcloud_27.pcd  pointcloud_28.pcd  robot_pose.xml
src/handeye_calib_sphere/dataset/: handeye_init.xml  handeye_result.xml  pointcloud_000.pcd  pointcloud_001.pcd  pointcloud_002.pcd  pointcloud_003.pcd  pointcloud_004.pcd  pointcloud_005.pcd  pointcloud_006.pcd  pointcloud_007.pcd  pointcloud_008.pcd  pointcloud_009.pcd  pointcloud_01.pcd  pointcloud_010.pcd  pointcloud_011.pcd  pointcloud_012.pcd  pointcloud_013.pcd  pointcloud_014.pcd  pointcloud_015.pcd  pointcloud_016.pcd  pointcloud_017.pcd  pointcloud_018.pcd  pointcloud_019.pcd  pointcloud_02.pcd  pointcloud_020.pcd  pointcloud_021.pcd  pointcloud_022.pcd  pointcloud_023.pcd  pointcloud_024.pcd  pointcloud_025.pcd  pointcloud_026.pcd  pointcloud_027.pcd  pointcloud_028.pcd  pointcloud_029.pcd  pointcloud_03.pcd  pointcloud_030.pcd  pointcloud_031.pcd  pointcloud_032.pcd  pointcloud_033.pcd  pointcloud_034.pcd  (+43 more)
src/handeye_calib_sphere/example/: CalibratedTransform.yml
src/handeye_calib_sphere/include/: ArucoPlane.h  CalibrationTool.h  CommonInclude.h  aruco_plane.h  calibration_tool.h  ceres_extensions.h  common_include.h  settings.h
src/handeye_calib_sphere/launch/: UR_结果  eyeinhand_online.launch  grab_data.launch  grab_data_sda.launch  grab_data_ur10.launch  grab_tf.launch  publish_cam_transform.launch  run_calib.launch  show_result.launch
src/handeye_calib_sphere/matlab_ws/: C.m  Q.m  W.m  optimizaiton.m  优化函数.docx
src/handeye_calib_sphere/matlab_ws/version2/: Conj.m  M.m  Pb_result.txt  optim.m
src/handeye_calib_sphere/matlab_ws/version_master/: D.m  Untitled.mlx
src/handeye_calib_sphere/src/: ArucoPlane.cpp  CalibrationTool.cpp  aruco_plane.cpp  calibration_tool.cpp  eyeinhand_calib.cpp  eyeinhand_calib_node.cpp  grab_data_node.cpp  grab_tf_node.cpp
src/handeye_calib_sphere/src/other_tools/: eyeinhand_calib_fake_node.cpp  fit_sphere_node.cpp  validation.cpp  validation_offline.cpp  validation_offline2.cpp
src/handeye_calib_sphere/test/: fit_sphere.cpp  generate_fake_data.cpp  generate_fake_data_v2.cpp  generate_fake_data_v3.cpp
src/handeye_calib_sphere/test/testdata/: arm_left_link_tool0_TO_camera_link  pointcloud.pcd  robot_pose.xml  sphere_center_in_base
src/kinect_driver/: CMakeLists.txt  package.xml
src/kinect_driver/include/kinect_driver/: CameraInterface.h  OpenNI2Interface.h
src/kinect_driver/launch/: kinect_driver.launch
src/kinect_driver/src/: OpenNI2Interface.cpp  kinect_server.cpp  main.cpp
src/realsense2_driver/: CMakeLists.txt  package.xml
src/realsense2_driver/src/: realsense2_driver.cpp  realsense2_server.cpp
src/rgbd_srv/: CMakeLists.txt  package.xml
src/rgbd_srv/srv/: rgbd.srv
